@@ -3,22 +3,19 @@
 module AdaptiveCards
   # An Adaptive Card [Column](https://adaptivecards.io/explorer/Column.html)
   class Column < Base
-    ALLOWED_OPTIONS = {
-                        id: String,
-                        select_action: AdaptiveCards::Action::Base,
-                        separator: AdaptiveCards::Boolean,
-                        style: %w[default emphasis],
-                        spacing: %w[none small default medium large extraLarge],
-                        width: %w[auto stretch] # Also need to support numeric widths
-                      }.freeze
+    option :id, required_type: String
+    option :select_action, required_type: AdaptiveCards::Action::Base,
+                           excluded_types: [ AdaptiveCards::Action::ShowCard ]
+    option :separator, required_type: AdaptiveCards::Boolean
+    option :spacing, valid_values: %w[none small default medium large extraLarge]
+    option :style, valid_values: %w[default emphasis]
+    option :width, valid_values: %w[auto stretch] # Also need to support numeric widths
 
-    attr_accessor *ALLOWED_OPTIONS.keys
-    
     attr_accessor :items
 
     def initialize(options = {})
+      super options
       @items = []
-      setup_options options
     end
 
     # Add an item to this column
@@ -41,10 +38,6 @@ module AdaptiveCards
     
     def to_h
       super.merge(items: items.map(&:to_h))
-    end
-
-    def supported_options
-      ALLOWED_OPTIONS
     end
   end
 end
