@@ -3,20 +3,18 @@
 module AdaptiveCards
   # An Adaptive Card [ColumnSet](https://adaptivecards.io/explorer/ColumnSet.html)
   class ColumnSet < Base
-    ALLOWED_OPTIONS = {
-                        id: String,
-                        select_action: AdaptiveCards::Action::Base,
-                        separator: AdaptiveCards::Boolean,
-                        spacing: %w[none small default medium large extraLarge padding]
-                      }.freeze
+    option :id, required_type: String
+    option :select_action,
+           required_type: AdaptiveCards::Action::Base,
+           excluded_types: [ AdaptiveCards::Action::ShowCard ]
+    option :separator, required_type: AdaptiveCards::Boolean
+    option :spacing, valid_values: %w[none small default medium large extraLarge padding]
 
-    attr_accessor *ALLOWED_OPTIONS.keys
-    
     attr_accessor :columns
-
+    
     def initialize(options = {})
+      super options
       @columns = []
-      setup_options options
     end
 
     # Add a {Column} to this column set
@@ -39,12 +37,8 @@ module AdaptiveCards
     # Option keys will have been converted to camel-cased strings already
     def to_h
       hash = super
-      hash[:columns] = columns.map(&:to_h) unless columns.empty?
+      hash[:columns] = @columns.map(&:to_h) unless @columns.empty?
       hash
-    end
-
-    def supported_options
-      ALLOWED_OPTIONS
     end
   end
 end
