@@ -3,19 +3,16 @@
 module AdaptiveCards
   # An Adaptive Card [TextBlock](https://adaptivecards.io/explorer/TextBlock.html)
   class TextBlock < Base
-    ALLOWED_OPTIONS = { 
-                        horizontal_alignment: %w[left center right],
-                        color: %w[default dark light accent good warning attention],
-                        subtle: AdaptiveCards::Boolean,
-                        max_lines: Integer,
-                        size: %w[small default medium large extraLarge],
-                        weight: %w[lighter default bolder],
-                        wrap: AdaptiveCards::Boolean,
-                        spacing: %w[none small default medium large extraLarge],
-                        separator: AdaptiveCards::Boolean
-                      }.freeze
-
-    attr_accessor *ALLOWED_OPTIONS.keys
+    option :id, required_type: String
+    option :color, valid_values: %w[default dark light accent good warning attention]
+    option :horizontal_alignment, valid_values: %w[left center right]
+    option :is_subtle, required_type: AdaptiveCards::Boolean
+    option :max_lines, required_type: Integer
+    option :separator, required_type: AdaptiveCards::Boolean
+    option :size, valid_values: %w[small default medium large extraLarge]
+    option :spacing, valid_values: %w[none small default medium large extraLarge padding]
+    option :weight, valid_values: %w[lighter default bolder]
+    option :wrap, required_type: AdaptiveCards::Boolean
 
     attr_accessor :text
 
@@ -24,16 +21,12 @@ module AdaptiveCards
     # @param options [Hash] the options to set on the text block,
     #   see the Adaptive Card schema for valid values
     def initialize(text, options = {})
+      super options
       @text = text
-      setup_options options
     end
     
     def to_h
       super.merge( text: text )
-    end
-
-    def supported_options
-      ALLOWED_OPTIONS
     end
   end
 end
