@@ -9,6 +9,11 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/) and this p
 ### Added
 
 - Support for selectAction the card AdaptiveCards.
+- Support for ShowCard action
+
+### Changed
+
+- Overhauled options processing to use class macros
 
 ## 0.1.0 (2018-11-25)
 
